<resources>
    <string name="app_name">Amtt</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_expected_results">Expected Results</string>
    <string name="title_activity_create_issue">Create issue</string>
    <string name="title_activity_steps">Recorded steps</string>
    <string name="title_activity_user_info">User info</string>
    <string name="title_activity_amtt">Choose user</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_paint">Notes</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_take_step">Take step</string>
    <string name="title_activity_task_name">Task name</string>
    <string name="title_activity_share_file">Share file</string>
    <string name="title_activity_auth_method">Auth method</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="empty_list_view">There is no saved steps =(</string>
    <string name="create_ticket_error">It seems assignee %s doesn\'t exist or something else went wrong=(</string>
    <string name="error_title_auth">Authorization error</string>
    <string name="error_title_request">Request error</string>
    <string name="error_title_connection">Connection error</string>
    <string name="error_message_auth">Check your credentials</string>
    <string name="error_message_auth_forbidden">Visit jira.epam.com before using Amtt</string>
    <string name="error_message_no_internet">You are offline</string>
    <string name="error_message_host">Unknown error</string>
    <string name="error_message_gateway">Server error</string>
    <string name="error_message_web_address">Wrong web address</string>
    <string name="error_message_connection">Check whether your internet connection is stable</string>
    <string name="error_button_close">Close</string>
    <string name="label_activity">"Activity: "</string>
    <string name="label_added_step_without_screen">Added step without screen</string>
    <string name="label_add_spreadsheet_key">Add spreadsheet key</string>
    <string name="label_affects_versions">Affects Version/s</string>
    <string name="label_attachment">Attachment</string>
    <string name="label_button_main">Main button</string>
    <string name="label_stop_record">Stop record</string>
    <string name="label_clear_environment">Clear environment</string>
    <string name="label_clear_notes">Clear notes</string>
    <string name="label_close">Close</string>
    <string name="label_setting">Settings</string>
    <string name="label_file_share">Artifacts</string>
    <string name="label_components">Component/s</string>
    <string name="label_create">Create</string>
    <string name="label_create_ticket">Create Ticket</string>
    <string name="label_description">Description</string>
    <string name="label_email">Email</string>
    <string name="label_environment">Environment</string>
    <string name="label_expected_result">Expected result</string>
    <string name="label_file_name">"File name: "</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_hide">Hide</string>
    <string name="label_issue_type">Issue Type</string>
    <string name="label_jira_url">JIRA Url</string>
    <string name="label_last_spreadsheet">Last spreadsheet</string>
    <string name="label_list_step">Show list step</string>
    <string name="label_list_users">List users</string>
    <string name="label_list_spreadsheets">List spreadsheets</string>
    <string name="label_locale">Locale</string>
    <string name="label_login">Log In</string>
    <string name="label_new_user">Add new QA</string>
    <string name="label_new_spreadsheet">Add new spreadsheet</string>
    <string name="label_undo">Undo</string>
    <string name="label_redo">Redo</string>
    <string name="label_no_email">" nor email and symbol @"</string>
    <string name="label_no_whitespaces">" cannot contain whitespaces"</string>
    <string name="label_no_whitespace_margins">" cannot begin and end to whitespace"</string>
    <string name="label_open_amtt">Open Amtt</string>
    <string name="label_package_name">"Package name: "</string>
    <string name="label_palette">Palette</string>
    <string name="label_password">Password</string>
    <string name="label_priority">Priority</string>
    <string name="label_project">Project</string>
    <string name="label_return">Return</string>
    <string name="label_screen_orientation">"Screen orientation: "</string>
    <string name="label_show">Show</string>
    <string name="label_show_steps">Show recorded steps</string>
    <string name="label_start_record">Record Bug</string>
    <string name="label_step">"Step "</string>
    <string name="label_steps">"Steps"</string>
    <string name="label_step_button">Take Screenshot</string>
    <string name="label_step_for_record_button">Take Screenshot for Record</string>
    <string name="label_summary">Title</string>
    <string name="label_tags">Tags</string>
    <string name="label_tester">Assignee</string>
    <string name="label_time_zone">Time zone</string>
    <string name="label_title">"Title: "</string>
    <string name="label_url">URL</string>
    <string name="label_user_name">Username</string>
    <string name="screenshot_image_description">image view for screenshot</string>
    <string name="notification_title">AMTT</string>
    <string name="notification_text">Tap to go to the settings</string>
    <string name="notification_attach_title_done">Uploaded %s done</string>
    <string name="notification_attachment_text_done">Uploaded successfully %s attached items.</string>
    <string name="notification_attach_title_init">Uploading %s</string>
    <string name="notification_attachment_text_init">Uploading %s attached items.</string>
    <string name="enter_prefix">Please, enter %s</string>
    <string name="enter_postfix_jira">" postfix '/jira'"</string>
    <string name="auth_passed">Authorization passed</string>
    <string name="check_box_do_not_show_again">Don\'t show again</string>
    <string name="dialog_exit">Do you want to close AMTT application?</string>
    <string name="epam_url">https://jira.epam.com</string>
    <string name="key_topbutton_show">topbutton_show</string>
    <string name="key_test_project">test_project</string>
    <string name="title_preff_topbutton_show">Widget</string>
    <string name="title_preff_test_project">Application to Connect</string>
    <string name="preff_category_topbutton">Top button</string>
    <string name="preff_category_test_project">Test project</string>
    <string name="url_prefix">https://</string>
    <string name="ticket_created">Ticket has been successfully created</string>
    <string name="content_description_screenshot">Screenshot</string>
    <string name="message_clear_environment">You will lose all the device specifications</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="label_attach_gif">Attach gif image</string>
    <string name="title_gif_isnt_saved">Gif image isn\'t saved!</string>
    <string name="title_gif_error">Gif image isn\'t created!</string>
    <string name="message_gif_isnt_saved">Something went wrong while saving gif file.</string>
    <string name="message_gif_error">Something went wrong while creating gif.</string>
    <string name="key_gif_info_dialog">gif_info_dialog</string>
    <string name="title_gif_info">Please, be patient!</string>
    <string name="message_gif_info">The amount of time that is spent for generating gif file depends on the number of screenshots and their resolution, e.g if there is two screenshots operation doesn\'t take more than five minutes.</string>
    <string name="title_step_deletion">Delete step?</string>
    <string name="message_step_deletion">All the information related to this screenshot will be removed.</string>
    <string name="key_step_deletion_dialog">key_step_deletion_dialog</string>
    <string name="message_lose_notes">Otherwise all the notes will be lost.</string>
    <string name="title_lose_notes">Save changes?</string>
    <string name="title_drawing_customization">Drawing customization</string>
    <string name="label_continue_editing">Continue editing</string>
    <string name="screenshot_loading_error">Ooops! Something went wrong=)</string>
    <string name="message_clear_notes">All the drawn notes will be erased!</string>
    <string name="title_clear_notes">Clear screenshot?</string>
    <string name="title_notes_arent_applied">Notes aren\'t applied yet</string>
    <string name="message_notes_arent_applied">Usually operation takes few seconds.</string>
    <string name="label_assign_self">Assign to me</string>
    <string name="label_create_another">Create another</string>
    <string name="label_attach_logs">Attach logs</string>
    <string name="key_is_attach_logs">IS_ATTACH_LOGS</string>
    <string name="search_view_hint">Search</string>
    <string name="label_null_search_result">Nothing Found</string>
    <string name="label_amtt_system_group_notification">Amtt_system</string>
    <string name="title_error_caught_notification">Application Crashed</string>
    <string name="text_caught_exception">Tap for create ticket</string>
    <string name="lable_list_fragments">"Visible fragments: "</string>
    <string name="checkbox_activity_info_key">checkbox_activity_info_key</string>
    <string name="checkbox_screen_key">checkbox_screen_key</string>
    <string name="take_step_dialog_error_message">Choose at least one variant!</string>
    <string name="take_step_dialog_positive_button">Take</string>
    <string name="take_step_dialog_message">Choose at least one variant</string>
    <string name="take_step_dialog_title">Take step</string>
    <string name="title_activity_gif_player">Gif player</string>
    <string name="label_error_gif_message">Can\'t play gif image.</string>
    <string name="label_gif_created">Gif has been successfully created</string>
    <string name="error_message_signature_run_test">Please reinstall unit test with same signature as test app.</string>
    <string name="label_take_activity_info">Activity info</string>
    <string name="label_take_screen">Screen</string>
    <string name="label_search">Search</string>
    <string name="title_exit_dialog">Exit dialog</string>
    <string name="label_message_exit_dialog">If you are exit you are losing your last unsaved change. Are you sure?</string>
    <string name="title_delete_log_dialiog">Delete log attachment</string>
    <string name="label_message_delete_log_dialiog">Log will be delete from attachment. Are you sure?</string>
    <string name="title_gif_cant_be_created">Gif cant\'t be crated</string>
    <string name="message_gif_cant_be_created">The number of images is too large. Remove few steps and try again.</string>
    <string name="title_activity_spreadsheet">SpreadsheetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_spreadsheet">NewSpreadsheetActivity</string>
    <string name="label_share_attachment">Share attachment to email</string>
    <string name="error_message_share_file">Don\'t have file for sharing.</string>
    <string name="label_title_draw_text_dialog">Draw text</string>
    <string name="label_description_drag_image">Drag image</string>
    <string name="label_xiaomi_brand">XIAOMI</string>
    <string name="label_preview_text_dialog_palette">Text</string>
    <string name="key_description">description</string>
    <string name="title_preff_description_template">Description template</string>
    <string name="key_remove_artifacts">remove_artifacts</string>
    <string name="title_preff_remove_all_artifacts">Remove artifacts</string>
    <string name="key_jira_project_name">key_jira_project_name</string>
    <string name="title_jira_project_name">Default JIRA Project</string>
</resources>