<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_activity_settings">
    <SwitchPreference
        android:icon="@drawable/ic_setting_visbility"
        android:defaultValue="true"
        android:key="@string/key_topbutton_show"
        android:title="@string/title_preff_topbutton_show" />
    <ListPreference
        android:icon="@drawable/ic_setting_project_name"
        android:key="@string/key_test_project"
        android:title="@string/title_preff_test_project"
        />
    <ListPreference
        android:id="@+id/lp_jira_project_name"
        android:icon="@drawable/ic_setting_project_name"
        android:key="@string/key_jira_project_name"
        android:title="@string/title_jira_project_name"
        />
    <Preference
        android:icon="@drawable/ic_setting_description"
        android:key="@string/key_description"
        android:title="@string/title_preff_description_template"/>
    <!--<EditTextPreference-->
        <!--android:icon="@drawable/ic_setting_description"-->
        <!--android:inputType="textLongMessage"-->
        <!--android:key="@string/key_description"-->
        <!--android:title="@string/title_preff_description_template"/>-->
    <Preference
        android:icon="@drawable/ic_setting_delete"
        android:key="@string/key_remove_artifacts"
        android:title="@string/title_preff_remove_all_artifacts"/>
</PreferenceScreen>