<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="amtt.epam.com.amtt.app.LoginActivity">

    <!-- *******URL BEGIN***************************************************-->
    <TextView
        android:id="@+id/tv_jira_url"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/label_url"
        android:textSize="@dimen/material_caption_font_size"
        android:paddingLeft="4dp" />

    <EditText
        android:id="@+id/jira_url"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/label_url"
        android:inputType="textUri"
        android:paddingTop="@dimen/material_vertical_size_divider"
        android:paddingBottom="7dp"
        android:textSize="@dimen/material_subhead_font_size" />

    <TextView
        android:id="@+id/tv_error_jira_url"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/label_summary"
        android:textSize="@dimen/material_caption_font_size"
        android:visibility="gone" />
    <!-- *******URL END***********************************************************-->

    <!-- *******USER NAME BEGIN***************************************************-->

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/label_url"
        android:textSize="@dimen/material_caption_font_size"/>

    <TextView
        android:id="@+id/tv_error_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/label_summary"
        android:textSize="@dimen/material_caption_font_size"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/user_name"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_user_name" />

    <!-- *******USER NAME END***************************************************-->

    <!-- *******PASSWORD BEGIN***************************************************-->

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password" />

    <!-- *******PASSWORD END***************************************************-->

    <Button
        android:id="@+id/login_button"
        android:text="@string/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_gravity="center"/>

</LinearLayout>
