<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/step_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_step"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/icon_size_step_delete"
                android:layout_height="@dimen/icon_size_step_delete"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/content_description_screenshot"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_delete" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/screenshot_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/screenshot_image_description"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/activity_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="@dimen/abc_action_bar_icon_vertical_padding_material" />

    </LinearLayout>

</android.support.v7.widget.CardView>
