<?xml version="1.0"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="amtt.epam.com.amtt.app.UserInfoActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/activity_main_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/user_image"
                        android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                        android:paddingLeft="@dimen/abc_action_bar_icon_vertical_padding_material">

                        <amtt.epam.com.amtt.view.TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_user_name"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:textSize="@dimen/material_font_size_subhead" />

                        <amtt.epam.com.amtt.view.TextView
                            android:id="@+id/user_name_subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/user_name"
                            android:text="@string/label_user_name"
                            android:textColor="@color/abc_secondary_text_material_light"
                            android:textSize="@dimen/material_font_size_body_1" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                    android:paddingLeft="72dp"
                    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/jira_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_jira_url"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/material_font_size_subhead" />

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/jira_url_subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/jira_url"
                        android:text="@string/label_jira_url"
                        android:textColor="@color/abc_secondary_text_material_light"
                        android:textSize="@dimen/material_font_size_body_1" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                    android:paddingLeft="72dp"
                    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material">

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_full_name"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/material_font_size_subhead" />

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_display_name_subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_full_name"
                        android:text="@string/label_full_name"
                        android:textColor="@color/abc_secondary_text_material_light"
                        android:textSize="@dimen/material_font_size_body_1" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                    android:paddingLeft="72dp"
                    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_email"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/material_font_size_subhead" />

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_email_subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_email"
                        android:text="@string/label_email"
                        android:textColor="@color/abc_secondary_text_material_light"
                        android:textSize="@dimen/material_font_size_body_1" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                    android:paddingLeft="72dp"
                    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_time_zone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_time_zone"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/material_font_size_subhead" />

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_time_zone_subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_time_zone"
                        android:text="@string/label_time_zone"
                        android:textColor="@color/abc_secondary_text_material_light"
                        android:textSize="@dimen/material_font_size_body_1" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
                    android:paddingLeft="72dp"
                    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material"
                    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_locale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_locale"
                        android:textColor="@color/abc_primary_text_material_light"
                        android:textSize="@dimen/material_font_size_subhead" />

                    <amtt.epam.com.amtt.view.TextView
                        android:id="@+id/user_locale_subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_locale"
                        android:text="@string/label_locale"
                        android:textColor="@color/abc_secondary_text_material_light"
                        android:textSize="@dimen/material_font_size_body_1" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />

</RelativeLayout>